--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2154,7 +2154,7 @@ ul.list_action li a .i_report {
 }
 
 .btn_addFriend:hover {
-    background: #69cd11;
+    background: #000;
 }
 
 .btn_addRemove {
